--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="documents/resume/Rishi_CV.pdf">CV</a></div>
+<div class="menu-item"><a href="Rishi_CV.pdf">CV</a></div>
 </td>
 <td id="layout-content">
 <p><br />
@@ -34,7 +34,7 @@
 
     <li>
         <p>
-            <i>Mar 2023- June 2023</i> Intern, <a href="https://ecosystem.siemens.com/researchandinnovation/munich/overview" target=&ldquo;blank&rdquo;>ITLR</a>, <a href="https://www.manit.ac.in/" target=&ldquo;blank&rdquo;>MANIT, Bhopal</a>, advised by <a href="https://de.linkedin.com/in/theresapasch" target=&ldquo;blank&rdquo;>Msc. Theresa Pasch</a> (<a href="documents/slides_poster/praktikum_bericht.pdf" target=&ldquo;blank&rdquo;>Internship</a>)
+            <i>Mar 2023- June 2023</i> Intern, <a href="https://ecosystem.siemens.com/researchandinnovation/munich/overview" target=&ldquo;blank&rdquo;>ITLR</a>, <a href="https://www.manit.ac.in/" target=&ldquo;blank&rdquo;>MANIT, Bhopal</a>, advised by <a href="https://de.linkedin.com/in/theresapasch" target=&ldquo;blank&rdquo;>Msc. Theresa Pasch</a> (<a href="praktikum_bericht.pdf" target=&ldquo;blank&rdquo;>Internship</a>)
         </p>
     </li>
     <li>
@@ -59,7 +59,7 @@
     </li>
     <li>
         <p>
-            <i>2013-2017:</i> B. Tech., <a href="https://www.manit.ac.in/content/mechanical-engineering" target=&ldquo;blank&rdquo;>ME</a>, <a href="https://www.manit.ac.in/" target=&ldquo;blank&rdquo;>MANIT, Bhopal</a>, advised by <a href="https://www.manit.ac.in/content/dr-rajesh-gupta" target=&ldquo;blank&rdquo;>Prof. Rajesh Gupta</a> (<a href="documents/slides_poster/major_project.pdf" target=&ldquo;blank&rdquo;>thesis</a>)
+            <i>2013-2017:</i> B. Tech., <a href="https://www.manit.ac.in/content/mechanical-engineering" target=&ldquo;blank&rdquo;>ME</a>, <a href="https://www.manit.ac.in/" target=&ldquo;blank&rdquo;>MANIT, Bhopal</a>, advised by <a href="https://www.manit.ac.in/content/dr-rajesh-gupta" target=&ldquo;blank&rdquo;>Prof. Rajesh Gupta</a> (<a href="major_project.pdf" target=&ldquo;blank&rdquo;>thesis</a>)
         </p>
     </li>
     <li>
@@ -84,21 +84,13 @@
 </li>
 
 <h2>Detailed Bio </h2>
-<p>(See <a href="documents/bio.txt" target=&ldquo;blank&rdquo;>here</a> for a bio in third person.)
-</p>
+
 <p><b>
     I am currently pursuing Masters at RWTH Aachen in Computer Aided Conception in Mechanical Engineering. With this course, I wish to cement my fundamentals of Fluid Dynamics. Among the curriculum, CFD is taught under the AIA of RWTH which has been the main motivator for choosing the course and University
     I have been a working professional before, but rooted myself towards learning Continuum Mechanics and Fluid Dynamics. While pursuing Bachelors from NIT Bhopal, I have worked on Solid Body Designing at Mach Speeds and conducted experiments on Combustion Optimization in IC Engines. With my interest in Fluid Gas Interaction, I am studying Multiphase Flows, and Turbulence Modelling at RWTH Aachen
     I have deep interests in Reinforcement Learning and using MATLAB has been a great experimenting base for me. I have used ANSYS, Hypermesh and CONVERGE for multiple projects. I have Industry experience for using CATIA and Solidworks, while working for Crompton Greaves and Hero Moto Corp. I code in Python for my interest in ML and recently started learning Java as a part of my curriculum.
     I am still ambitious for Research with a Wide angle approach with my core interest areas being Computational Mechanics and Multiphase Flows.
 </b></p>
-<p><i>Fun Stat: Website visitor counts by country since Apr 3, 2022</i>
-</p>
-<a href="https://info.flagcounter.com/IO8p"><img src="https://s11.flagcounter.com/count2/IO8p/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_180/viewers_0/labels_0/pageviews_10/flags_0/percent_0/"></a>
-<div id="footer">
-<div id="footer-text">
-Page generated 2023-07-31 20:50:41 EDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
-</div>
 </div>
 </td>
 </tr>
