--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
 <td align="left"><ul>
     <li>
         <p>
-            <i>Starting 2024:</i> Phd, <a href="https://www.itlr.uni-stuttgart.de/en/" target=&ldquo;blank&rdquo;>ITLR</a>, <a href="https://www.uni-stuttgart.de/en/" target=&ldquo;blank&rdquo;>Cornell Tech</a>
+            <i>Starting 2024:</i> Phd, <a href="https://www.itlr.uni-stuttgart.de/en/" target=&ldquo;blank&rdquo;>ITLR</a>, <a href="https://www.uni-stuttgart.de/en/" target=&ldquo;blank&rdquo;></a>
         </p>
     </li>
     <li>
         <p>
-            <i>June 2023- November 2023</i> Master Thesis, <a href="https://ecosystem.siemens.com/researchandinnovation/munich/overview" target=&ldquo;blank&rdquo;>ITLR</a>, <a href="https://www.manit.ac.in/" target=&ldquo;blank&rdquo;>MANIT, Bhopal</a>, advised by <a href="https://de.linkedin.com/in/theresapasch" target=&ldquo;blank&rdquo;>Msc. Theresa Pasch</a> 
+            <i>June 2023- November 2023</i> Master Thesis, <a href="https://ecosystem.siemens.com/researchandinnovation/munich/overview" target=&ldquo;blank&rdquo;></a>,<i>SIEMENS, Munich</i>, advised by <a href="https://de.linkedin.com/in/theresapasch" target=&ldquo;blank&rdquo;>Msc. Theresa Pasch</a> 
         </p>
     </li>
 
     <li>
         <p>
-            <i>Mar 2023- June 2023</i> Intern, <a href="https://ecosystem.siemens.com/researchandinnovation/munich/overview" target=&ldquo;blank&rdquo;>ITLR</a>, <a href="https://www.manit.ac.in/" target=&ldquo;blank&rdquo;>MANIT, Bhopal</a>, advised by <a href="https://de.linkedin.com/in/theresapasch" target=&ldquo;blank&rdquo;>Msc. Theresa Pasch</a> (<a href="praktikum_bericht.pdf" target=&ldquo;blank&rdquo;>Internship</a>)
+            <i>Mar 2023- June 2023</i> Intern, <a href="https://ecosystem.siemens.com/researchandinnovation/munich/overview" target=&ldquo;blank&rdquo;></a>, <a href="https://ecosystem.siemens.com/researchandinnovation/munich/overview" target=&ldquo;blank&rdquo;>SIEMENS, Munich</a>, advised by <a href="https://de.linkedin.com/in/theresapasch" target=&ldquo;blank&rdquo;>Msc. Theresa Pasch</a> (<a href="praktikum_bericht.pdf" target=&ldquo;blank&rdquo;>Internship</a>)
         </p>
     </li>
     <li>
