--- a/index.html
+++ b/index.html
@@ -39,17 +39,18 @@
     </li>
     <li>
         <p>
-            <i>Jan 2022-Present:</i> Student Researcher,Institute of Combustion Technology <a href="https://itv.rwth-aachen.de/index.php" target=&ldquo;blank&rdquo;>ITV ORIE</a>
+            <i>Jan 2022-Present:</i> Student Researcher,Institute of Combustion Technology <a href="https://itv.rwth-aachen.de/index.php" target=&ldquo;blank&rdquo;>ITV ORIE</a>, advised by <a href="https://www.itv.rwth-aachen.de/institut/mitarbeiter/avijit-saha/" target=&ldquo;blank&rdquo;>Msc. Avijit Saha</a> 
         </p>
     </li>
     <li>
         <p>
-            <i>Mar 2023-June2023:</i> <a href="https://www.ist.rwth-aachen.de/cms/~rait/IST/?lidx=1" target=&ldquo;blank&rdquo;>Student Research Assistant</a>,
+            <i>Mar 2023-June2023:</i> <a href="https://www.ist.rwth-aachen.de/cms/~rait/IST/?lidx=1" target=&ldquo;blank&rdquo;>Student Research Assistant</a>,advised by <a href="https://www.rwth-aachen.de/cms/root/Die-RWTH/Kontakt-Anreise/Kontakt/~bdfr/Mitarbeiter-CAMPUS-/?contact=aaaaaaaaaacwznx&gguid=0xE255D46A3DB1EF439D6DD400CDBEA6F3" target=&ldquo;blank&rdquo;>Msc. Nima Fard Afsar</a> 
+
         </p>
     </li>
     <li>
         <p>
-            <i>Oct 2021- Dec 2023:</i> MS, Computer Aided Conception in Mechanical Engineering., <a href="https://www.rwth-aachen.de/go/id/a/?lidx=1" target=&ldquo;blank&rdquo;>CAME</a>,
+            <i>Oct 2021- Dec 2023:</i> MS, Computer Aided Conception in Mechanical Engineering., <a href="https://www.rwth-aachen.de/go/id/a/?lidx=1" target=&ldquo;blank&rdquo;>CAME</a>         
         </p>
     </li>
     <li>
