--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </p>
 <h1>Rishi Dhar</h1>
 <table class="imgtable"><tr><td>
-<img src="images/rishi_pic.jpeg" alt="Coming soon!" width="240px" height="201px" />&nbsp;</td>
+<img src="images/rishi_pic.JPG" alt="Coming soon!" width="240px" height="201px" />&nbsp;</td>
 <td align="left"><ul>
     <li>
         <p>
