--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 </p>
 <h1>Rishi Dhar</h1>
 <table class="imgtable"><tr><td>
-<img src="images/rishi_pic.JPG" alt="Coming soon!" width="240px" height="201px" />&nbsp;</td>
+<img src="rishi_pic.JPG" alt="Coming soon!" width="240px" height="201px" />&nbsp;</td>
 <td align="left"><ul>
     <li>
         <p>
-            <i>Starting 2024:</i> Phd, <a href="https://www.itlr.uni-stuttgart.de/en/" target=&ldquo;blank&rdquo;>ITLR</a>, <a href="https://www.uni-stuttgart.de/en/" target=&ldquo;blank&rdquo;></a>
+            <i>Starting 2024:</i> Phd, <a href="https://www.itlr.uni-stuttgart.de/en/" target=&ldquo;blank&rdquo;>ITLR</a>, <a href="https://www.uni-stuttgart.de/en/" target=&ldquo;blank&rdquo;>University of Stuttgart</a>, advised by <a href="https://www.itlr.uni-stuttgart.de/team/Lamanna/" target=&ldquo;blank&rdquo;>Dr. Grazia Lamanna</a>
         </p>
     </li>
     <li>
         <p>
-            <i>June 2023- November 2023</i> Master Thesis, <a href="https://ecosystem.siemens.com/researchandinnovation/munich/overview" target=&ldquo;blank&rdquo;></a>,<i>SIEMENS, Munich</i>, advised by <a href="https://de.linkedin.com/in/theresapasch" target=&ldquo;blank&rdquo;>Msc. Theresa Pasch</a> 
+            <i>June 2023- November 2023</i> Master Thesis, <a href="https://ecosystem.siemens.com/researchandinnovation/munich/overview" target=&ldquo;blank&rdquo;></a>, <a href="https://ecosystem.siemens.com/researchandinnovation/munich/overview" target=&ldquo;blank&rdquo;>SIEMENS, Munich</a>, advised by <a href="https://de.linkedin.com/in/theresapasch" target=&ldquo;blank&rdquo;>Msc. Theresa Pasch</a> 
         </p>
     </li>
 
@@ -65,7 +65,7 @@
     </li>
     <li>
         <p>
-            <i>Research</i>: Statistically &amp; computationally efficient strategies for personalized decision-making using ideas from causal inference, reinforcement learning, Bayesian inference, optimization, and high-dimensional statistics with several applications in healthcare
+            <i>Research</i>: Multiphase Flows; turbulence modelling, neural networks, solver development CFD, FEM and DEM.  
         </p>
     </li>
     <li>
