--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </p>
 <h1>Rishi Dhar</h1>
 <table class="imgtable"><tr><td>
-<img src="rishi_pic.JPG" alt="Coming soon!" width="240px" height="201px" />&nbsp;</td>
+<img src="rishi_pic.JPG" alt="Coming soon!" width="200px" height="201px" />&nbsp;</td>
 <td align="left"><ul>
     <li>
         <p>
@@ -39,13 +39,12 @@
     </li>
     <li>
         <p>
-            <i>Jan 2022-Present:</i> Student Researcher,Institute of Combustion Technology <a href="https://itv.rwth-aachen.de/index.php" target=&ldquo;blank&rdquo;>ITV ORIE</a>, advised by <a href="https://www.itv.rwth-aachen.de/institut/mitarbeiter/avijit-saha/" target=&ldquo;blank&rdquo;>Msc. Avijit Saha</a> 
+            <i>Jan 2022-Present:</i> Student Researcher,Institute of Combustion Technology <a href="https://itv.rwth-aachen.de/index.php" target=&ldquo;blank&rdquo;>ITV</a>, advised by <a href="https://www.itv.rwth-aachen.de/institut/mitarbeiter/avijit-saha/" target=&ldquo;blank&rdquo;>Msc. Avijit Saha</a> 
         </p>
     </li>
     <li>
         <p>
-            <i>Mar 2023-June2023:</i> <a href="https://www.ist.rwth-aachen.de/cms/~rait/IST/?lidx=1" target=&ldquo;blank&rdquo;>Student Research Assistant</a>,advised by <a href="https://www.rwth-aachen.de/cms/root/Die-RWTH/Kontakt-Anreise/Kontakt/~bdfr/Mitarbeiter-CAMPUS-/?contact=aaaaaaaaaacwznx&gguid=0xE255D46A3DB1EF439D6DD400CDBEA6F3" target=&ldquo;blank&rdquo;>Msc. Nima Fard Afsar</a> 
-
+             <i>Mar 2023-June2023:</i> Student Researcher,Institute of Jet Propulsion <a href="<i>Jan 2022-Present:</i> Student Researcher,Institute of Jet Propulsion <a href="https://www.ist.rwth-aachen.de/cms/~rait/IST/?lidx=1" target=&ldquo;blank&rdquo;>IST</a>, advised by <a href="https://www.rwth-aachen.de/cms/root/Die-RWTH/Kontakt-Anreise/Kontakt/~bdfr/Mitarbeiter-CAMPUS-/?contact=aaaaaaaaaacwznx&gguid=0xE255D46A3DB1EF439D6DD400CDBEA6F3" target=&ldquo;blank&rdquo;>Msc. Nima Fard Afsar</a>" target=&ldquo;blank&rdquo;>
         </p>
     </li>
     <li>
