--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </p>
 <h1>Rishi Dhar</h1>
 <table class="imgtable"><tr><td>
-<img src="rishi_pic.JPG" alt="Coming soon!" width="200px" height="201px" />&nbsp;</td>
+<img src="rishi_pic.JPG" alt="Coming soon!" width="170px" height="201px" />&nbsp;</td>
 <td align="left"><ul>
     <li>
         <p>
@@ -44,12 +44,12 @@
     </li>
     <li>
         <p>
-             <i>Mar 2023-June2023:</i> Student Researcher,Institute of Jet Propulsion <a href="<i>Jan 2022-Present:</i> Student Researcher,Institute of Jet Propulsion <a href="https://www.ist.rwth-aachen.de/cms/~rait/IST/?lidx=1" target=&ldquo;blank&rdquo;>IST</a>, advised by <a href="https://www.rwth-aachen.de/cms/root/Die-RWTH/Kontakt-Anreise/Kontakt/~bdfr/Mitarbeiter-CAMPUS-/?contact=aaaaaaaaaacwznx&gguid=0xE255D46A3DB1EF439D6DD400CDBEA6F3" target=&ldquo;blank&rdquo;>Msc. Nima Fard Afsar</a>" target=&ldquo;blank&rdquo;>
+             <i>Mar 2023-June2023:</i> Student Researcher,Institute of Jet Propulsion <a href="<i>Jan 2022-Present:</i> Student Researcher,Institute of Jet Propulsion <a href="https://www.ist.rwth-aachen.de/cms/~rait/IST/?lidx=1" target=&ldquo;blank&rdquo;>IST</a>, advised by <a href="https://www.rwth-aachen.de/cms/root/Die-RWTH/Kontakt-Anreise/Kontakt/~bdfr/Mitarbeiter-CAMPUS-/?contact=aaaaaaaaaacwznx&gguid=0xE255D46A3DB1EF439D6DD400CDBEA6F3" target=&ldquo;blank&rdquo;>Msc. Nima Fard Afsar</a> 
         </p>
     </li>
     <li>
         <p>
-            <i>Oct 2021- Dec 2023:</i> MS, Computer Aided Conception in Mechanical Engineering., <a href="https://www.rwth-aachen.de/go/id/a/?lidx=1" target=&ldquo;blank&rdquo;>CAME</a>         
+            <i>Oct 2021- Dec 2023:</i> MS, Computer Aided Conception in Mechanical Engineering., <a href="https://www.rwth-aachen.de/go/id/a/?lidx=1" target=&ldquo;blank&rdquo;>RWTH</a>         
         </p>
     </li>
     <li>
