--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </li>
     <li>
         <p>
-             <i>Mar 2023-June2023:</i> Student Researcher,Institute of Jet Propulsion <a href="<i>Jan 2022-Present:</i> Student Researcher,Institute of Jet Propulsion <a href="https://www.ist.rwth-aachen.de/cms/~rait/IST/?lidx=1" target=&ldquo;blank&rdquo;>IST</a>, advised by <a href="https://www.rwth-aachen.de/cms/root/Die-RWTH/Kontakt-Anreise/Kontakt/~bdfr/Mitarbeiter-CAMPUS-/?contact=aaaaaaaaaacwznx&gguid=0xE255D46A3DB1EF439D6DD400CDBEA6F3" target=&ldquo;blank&rdquo;>Msc. Nima Fard Afsar</a> 
+             <i>Mar 2023-June2023:</i> Student Researcher,Institute of Jet Propulsion and Turbomachinery <a href="https://www.ist.rwth-aachen.de/cms/~rait/IST/?lidx=1" target=&ldquo;blank&rdquo;>IST</a>, advised by <a href="https://www.rwth-aachen.de/cms/root/Die-RWTH/Kontakt-Anreise/Kontakt/~bdfr/Mitarbeiter-CAMPUS-/?contact=aaaaaaaaaacwznx&gguid=0xE255D46A3DB1EF439D6DD400CDBEA6F3" target=&ldquo;blank&rdquo;>Msc. Nima Fard Afsar</a> 
         </p>
     </li>
     <li>
