--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="Rishi_Dhar_CV.pdf">CV</a></div>
+<div class="menu-item"><a href="RIshi_Dhar_CV.pdf">CV</a></div>
 </td>
 <td id="layout-content">
 <p><br />
@@ -91,5 +91,7 @@
 </td>
 </tr>
 </table>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1585010344671187"
+     crossorigin="anonymous"></script>
 </body>
 </html>
