--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="RIshi_Dhar_CV.pdf">CV</a></div>
+<div class="menu-item"><a href="RIshi Dhar CV.pdf">CV</a></div>
 </td>
 <td id="layout-content">
 <p><br />
@@ -66,7 +66,8 @@
     <li>
         <p>
             <i>Contact and quick links</i>: <a href="mailto:rishi.dhar@rwth-aachen.de" target=&ldquo;blank&rdquo;>rishi.dhar@rwth-aachen.de</a>,
-            <a href="https://scholar.google.com/citations?hl=en&user=Dbk4V_cAAAAJ" target=&ldquo;blank&rdquo;>Google Scholar</a>,          
+            <a> href="https://scholar.google.com/citations?hl=en&user=Dbk4V_cAAAAJ" target=&ldquo;blank&rdquo;>Google Scholar</a>,
+            <a> href="https://github.com/Rishi15" target=&ldquo;blank&rdquo;>Github</a>,
         </p>
     </li>
 </ul>
