--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <li>
         <p>
             <i>Contact and quick links</i>: <a href="mailto:rishi.dhar@rwth-aachen.de" target=&ldquo;blank&rdquo;>rishi.dhar@rwth-aachen.de</a>,
-            <a> href="https://scholar.google.com/citations?hl=en&user=Dbk4V_cAAAAJ" target=&ldquo;blank&rdquo;>Google Scholar</a>,
-            <a> href="https://github.com/Rishi15" target=&ldquo;blank&rdquo;>Github</a>,
+            <a, href="https://scholar.google.com/citations?hl=en&user=Dbk4V_cAAAAJ" target=&ldquo;blank&rdquo;>Google Scholar</a>,
+            <a, href="https://github.com/Rishi15" target=&ldquo;blank&rdquo;>Github</a>.
         </p>
     </li>
 </ul>
