--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="RIshi Dhar CV.pdf">CV</a></div>
+<div class="menu-item"><a href="Rishi_Dhar_CV.pdf">CV</a></div>
 </td>
 <td id="layout-content">
 <p><br />
