--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <td align="left"><ul>
     <li>
         <p>
-            <i>Feb 2024 </i> Incoming Phd Student, ITLR<a href="https://www.itlr.uni-stuttgart.de/en/" target=&ldquo;blank&rdquo;></a>,<a href="https://www.itlr.uni-stuttgart.de/en/" target=&ldquo;blank&rdquo;>, Universität Stuttgart <a href="https://www.uni-stuttgart.de/" target=&ldquo;blank&rdquo;></a>,<a href="https://www.uni-stuttgart.de/" target=&ldquo;blank&rdquo;> under Prof. Dr.+ing. Bernhard Weigand<a href="https://www.itlr.uni-stuttgart.de/team/Weigand-00003/" target=&ldquo;blank&rdquo;><a href="https://www.itlr.uni-stuttgart.de/team/Weigand-00003/" target=&ldquo;blank&rdquo;>, in the DROPIT Collaboration group<a href="https://www.project.uni-stuttgart.de/dropit/" target=&ldquo;blank&rdquo;> </a> 
+            <i>Feb 2024 </i> Incoming Phd Student, <a href="https://www.itlr.uni-stuttgart.de/en/" target=&ldquo;blank&rdquo;>ITLR, <a href="https://www.uni-stuttgart.de/" target=&ldquo;blank&rdquo;> Universität Stuttgart , under <a href="https://www.itlr.uni-stuttgart.de/team/Weigand-00003/" target=&ldquo;blank&rdquo;> Prof. Dr.+ing. Bernhard Weigand, in the <a href="https://www.project.uni-stuttgart.de/dropit/" target=&ldquo;blank&rdquo;>DROPIT Collaboration group </a> 
+              
               
         </p>
     </li>
